# ChangeLog for x11-apps/xmodmap
# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/x11-apps/xmodmap/ChangeLog,v 1.43 2008/02/05 11:36:37 corsair Exp $

  05 Feb 2008; Markus Rothe <corsair@gentoo.org> xmodmap-1.0.3.ebuild:
  Stable on ppc64

  27 Jan 2008; Raúl Porcel <armin76@gentoo.org> xmodmap-1.0.3.ebuild:
  alpha/ia64/sparc stable

  10 Jan 2008; Daniel Gryniewicz <dang@gentoo.org> xmodmap-1.0.3.ebuild:
  Marked stable on amd64 for bug #202087

  19 Dec 2007; Dawid Węgliński <cla@gentoo.org> xmodmap-1.0.3.ebuild:
  Stable on x86 (bug #202087)

  09 Oct 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  -xmodmap-1.0.1.ebuild:
  Drop old ebuilds.

*xmodmap-1.0.3 (08 Sep 2007)

  08 Sep 2007; Donnie Berkholz <dberkholz@gentoo.org>;
  +xmodmap-1.0.3.ebuild:
  Bump for 7.3.

  07 Aug 2007; Gustavo Zacarias <gustavoz@gentoo.org> xmodmap-1.0.2.ebuild:
  Stable on sparc wrt #175465

  02 Jul 2007; Raúl Porcel <armin76@gentoo.org> xmodmap-1.0.2.ebuild:
  alpha stable wrt #175465

  24 Jun 2007; Joshua Kinard <kumba@gentoo.org> xmodmap-1.0.2.ebuild:
  Stable on mips, per #175465.

  20 May 2007; Jeroen Roovers <jer@gentoo.org> xmodmap-1.0.2.ebuild:
  Stable for HPPA (bug #175465).

  12 May 2007; nixnut <nixnut@gentoo.org> xmodmap-1.0.2.ebuild:
  Stable on ppc wrt bug 175465

  05 May 2007; Daniel Gryniewicz <dang@gentoo.org> xmodmap-1.0.2.ebuild:
  Marked stable on amd64 for bug #175465

  29 Apr 2007; Andrej Kacian <ticho@gentoo.org> xmodmap-1.0.2.ebuild:
  Stable on x86, bug #175465.

  25 Apr 2007; Raúl Porcel <armin76@gentoo.org> xmodmap-1.0.2.ebuild:
  Stable on ia64 wrt bug #175465.

  25 Apr 2007; Markus Rothe <corsair@gentoo.org> xmodmap-1.0.2.ebuild:
  Stable on ppc64; bug #175465

*xmodmap-1.0.2 (21 Oct 2006)

  21 Oct 2006; Joshua Baergen <joshuabaergen@gentoo.org>
  +xmodmap-1.0.2.ebuild:
  Version bump.

  10 Oct 2006; Donnie Berkholz <dberkholz@gentoo.org>; xmodmap-1.0.1.ebuild: