@@ -1,6 +1,6 @@
 DIST xmodmap-1.0.2.tar.bz2 94755 RMD160 ae3c14510b19917c80ffce189df0856645906146 SHA1 915294312359d4b3067ae2a2702eb1f1f41dbd0b SHA256 4bed79ba6efcaabb3ce055cf88419a5190f8ab9d3408e7b14d722351cbaf4b44
 DIST xmodmap-1.0.3.tar.bz2 102730 RMD160 75e10acd3421dd1d0d31666235332718f8b1a8d8 SHA1 5ad0f99735a13d6bb75ce63b2285f4c9c11be51b SHA256 c3bfc724792858222c138c1ae9a017e69e7d3bdda3fc9f5da38b232ab031147f
-EBUILD xmodmap-1.0.2.ebuild 481 RMD160 14107b07e95d05ff651bbab502f5e2397fe085dc SHA1 3982833813e4ed905b3ca3fd5433e60064d52f35 SHA256 aba50c54370a4fc6f25e0d0f71469170475f7f518ca2246d1e3934421650a2ee
-EBUILD xmodmap-1.0.3.ebuild 814 RMD160 de01e8ce94a9694a24fadf19c9c410fcdd5048f8 SHA1 3140f1f028402e4dc864a9e518772ab8cfc5f4e1 SHA256 d7a3c3dc245ba767fe5e2f0a3409b47a3e7fe055aecd8ce415d3df0950070a20
-MISC ChangeLog 4928 RMD160 c9ee3259823dfbdb3b1ef098c6fb16bb7c1ffec8 SHA1 d69872b5f152594020b6d2732d23a6b1a91f12e0 SHA256 a4245273521d8d99998fc1084e93efc1b734e2e591ed2fa0c0c391849961dae5
+EBUILD xmodmap-1.0.2.ebuild 485 RMD160 7009f84c920ef30a2bf8ee5094e0d986c404bd67 SHA1 acd18117abf049d71204433b816165d1d514157f SHA256 b2408d36e078d56e07b8c1463b5052a633543bb2fe28c3c2b47f38fdd1b16f93
+EBUILD xmodmap-1.0.3.ebuild 817 RMD160 b3ba8ed10976d166a71f5b1ba10527dbd8037ba6 SHA1 694b8ed3fd7daca1f7b62cb8be84128edd51ff32 SHA256 53065d183569a0675e1d8daa091ae40bdd0462b41cf78ff50758e537a3e9e398
+MISC ChangeLog 5152 RMD160 a650a8ed60a8bee9e294c64981a46a1ae00c3f5b SHA1 58dc2c105e80ddfcd23e7e908aadd041b2ef1ded SHA256 8b229d9773be1febed7df1c5e4af37b2e54b2736531d86239ece65bd58398c1f
 MISC metadata.xml 156 RMD160 c1274bdccf57603d580de0075ba07a35b7509560 SHA1 6f78f604e3d079d39189b40aaaa1ddb06182ad91 SHA256 5101ab0d4cc8c7125eea733c44e86962769bd77acaf53b69223b9cadcdd29055
