@@ -1,6 +1,13 @@
 # ChangeLog for x11-apps/xmodmap
-# Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/x11-apps/xmodmap/ChangeLog,v 1.43 2008/02/05 11:36:37 corsair Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/x11-apps/xmodmap/ChangeLog,v 1.45 2009/05/05 12:36:52 jer Exp $
+
+  05 May 2009; Jeroen Roovers <jer@gentoo.org> xmodmap-1.0.3.ebuild:
+  Stable for HPPA (bug #268581).
+
+  05 May 2009; Christian Faulhammer <fauli@gentoo.org> xmodmap-1.0.2.ebuild,
+  xmodmap-1.0.3.ebuild:
+  fix repoman warnings
 
   05 Feb 2008; Markus Rothe <corsair@gentoo.org> xmodmap-1.0.3.ebuild:
   Stable on ppc64
